# starting-ragchatbot-codebase

./: .coverage  CLAUDE.md  frontend-changes.md  pyproject.toml  setup.cfg
backend/: app.py
backend/tests/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_runner.py  test_unit_components.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh
